--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mariadb://localhost:3306/nbp
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mysql://szuflandia.pjwstk.edu.pl:3306/s25662
+spring.datasource.username=s25662
+spring.datasource.password=Mic.Krok
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 springdoc.swagger-ui.path=/api
